--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "sequelize": "^6.37.0",
     "sqlite3": "^5.1.7",
-    "dotenv": "^16.4.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.19.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -43,6 +45,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
     "eslint": "^8.57.0",
@@ -56,8 +59,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
-    "typescript": "^5.7.0",
-    "@types/validator": "^13.12.2"
+    "typescript": "^5.7.0"
   },
   "engines": {
     "node": ">=20.0.0"
